# aiden

./: pyproject.toml  rag.md
data/: clean_docs.txt
src/christine/: __init__.py  ai_demo.py  chat_bot.py
templates/: index.html
